# CLibs

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  linkedlist.c
.github/workflows/: c.yml
base64/: CMakeLists.txt  base64.c  base64.h  maintest.c
binary_tree/: maintest.c
bstr/: CMakeLists.txt  Makefile  README.md  bstr.c  maintest  maintest.c
data_structures/: bintree.h  linked_list.h  linkedlist.c  linkedlist.h  queue.c  queue.h  queue_test.c  stack.h  stack_test.c  tree.c  vector.h  vector_test.c
data_structures/binary_tree/: Makefile  README.md  bintree.c  bintree.h
data_structures/bstr/: Makefile  README.md  bstr.c  bstr.h  maintest.c
data_structures/vector/: Makefile  README.md  maintest.c  maintest.s  test.c  vector.c  vector.h
flag/: CMakeLists.txt  Makefile  README.md  flag.c  flag.h  maintest.c
libraries/Clip/: main.c  parse.c  parse.h
libraries/bstr/: bstr.c  bstr.h  maintest.c
vec/: CMakeLists.txt  Makefile  README.md  maintest.c  vector.c  vector.h
